# Python_training

./: .gitignore  README.md  pyproject.toml  urls.txt
src/: asgi_and_wsgi_task.py  async_http_request.py  async_http_request_advanced.py  lru_cache_decorator.py  meta_attrs_task.py  parallel_processing_task.py  redis_queue.py  search_in_list_task.py  single_lock_task.py  singleton.py  singleton_task.py  speed_limiter_task.py
