[project]
name = "itk-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.1",
    "ruff>=0.14.2",
]


[tool.ruff]
line-length = 79
src = ["src"]


[tool.ruff.lint]
select = [
    "E", "W", "F", "UP", "I", "B",
]