[project]
name = "itk-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "ruff>=0.14.2",
    "uvicorn>=0.38.0",
]


[tool.ruff]
line-length = 79
src = ["src"]


[tool.ruff.lint]
select = [
    "E", "W", "F", "UP", "I", "B",
]
